--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         <script>
             function bomOrder() {
                 // location.replace("./order.html");
-                location.href = "./order.html";
+                window.navigator.vibrate(20);
+                location.href = "./order.html", 10;
             }
         </script>
         <div class="row">
