--- a/order.html
+++ b/order.html
@@ -29,7 +29,8 @@
     <!-- Navigation -->
     <script>
         function bomIndex() {
-            location.replace("index.html");
+            window.navigator.vibrate(20);
+            location.replace("index.html", 10);
         }
     </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
