--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         </button> -->
             </div>
             <div class="modal-body" style="height:800px">
-                <div class="embed-responsive embed-responsive-16by9" style="height:500px">
+                <div class="embed-responsive embed-responsive-16by9" style="height:700px">
                     <iframe class="embed-responsive-item" src="./cart.html"></iframe>
                 </div>
             </div>
@@ -234,8 +234,8 @@
                         </button> -->
             </div>
             <div class="modal-body" style="height:700px">
-                <div class="embed-responsive embed-responsive-16by9" style="height:500px">
-                    <iframe class="embed-responsive-item" src="./history.html"></iframe>
+                <div class="embed-responsive embed-responsive-16by9" style="height:700px">
+                    <iframe class="embed-responsive-item" src="./loading.html"></iframe>
                 </div>
             </div>
             <!-- <div class="modal-footer" style="background-color: white;">
@@ -253,8 +253,8 @@
                             <span aria-hidden="true">&times;</span>
                         </button> -->
             </div>
-            <div class="modal-body" style="height:800px">
-                <div class="embed-responsive embed-responsive-16by9" style="height:500px">
+            <div class="modal-body" style="padding:400px">
+                <div class="embed-responsive embed-responsive-16by9" style="height:700px">
                     <<iframe class="embed-responsive-item" src="./contact.html"></iframe>>
                 </div>
             </div>
