--- a/order.html
+++ b/order.html
@@ -310,8 +310,15 @@
                     </div>
 
                 </div>
+                <script>
+                    function bomRate() {
+                        // location.replace("./order.html");
+                        window.navigator.vibrate(10);
+                        location.href = "./rate.html", 10;
+                    }
+                </script>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" onclick="bomRate()">Close</button>
                     <!-- <button type="button" class="btn btn-info">Save changes</button> -->
                 </div>
             </div>
