--- a/rate.html
+++ b/rate.html
@@ -30,7 +30,7 @@
 <body>
     <script>
         function backHome() {
-            location.href = "/index.html";
+            location.href = "./index.html";
         }
     </script>
     <div class="container" style="width: 400px;height: 400px;" onclick="backHome()"></div>
