--- a/index.html
+++ b/index.html
@@ -45,12 +45,7 @@
                     <li class="nav-item">
                         <a class="nav-link" type="button" data-toggle="modal" data-target="#modalContact">Contact Us</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">🛒 Cart</a>
-                    </li>
+
                 </ul>
             </div>
         </div>
@@ -235,7 +230,7 @@
             </div>
             <div class="modal-body" style="height:700px">
                 <div class="embed-responsive embed-responsive-16by9" style="height:700px">
-                    <iframe class="embed-responsive-item" src="./loading.html"></iframe>
+                    <iframe class="embed-responsive-item" src="/loading.html"></iframe>
                 </div>
             </div>
             <!-- <div class="modal-footer" style="background-color: white;">
@@ -255,7 +250,7 @@
             </div>
             <div class="modal-body" style="padding:400px">
                 <div class="embed-responsive embed-responsive-16by9" style="height:700px">
-                    <<iframe class="embed-responsive-item" src="./contact.html"></iframe>>
+                    <<iframe class="embed-responsive-item" src="/contact.html"></iframe>>
                 </div>
             </div>
             <!-- <div class="modal-footer" style="background-color: white;">
