--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </div>
             <div class="modal-body" style="height:700px">
                 <div class="embed-responsive embed-responsive-16by9" style="height:700px">
-                    <iframe class="embed-responsive-item" src="/contact.html"></iframe>
+                    <iframe class="embed-responsive-item" src="./contact.html"></iframe>
                 </div>
             </div>
             <!-- <div class="modal-footer" style="background-color: white;">
