--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <!-- Heading Row -->
         <div class="row align-items-center my-2">
             <div class="col-lg-12">
-                <img src="img/banner-1.jpg" width="100%" class="img-fluid rounded mt-5" alt="Responsive image">
+                <img src="img/dobi.png" width="100%" class="img-fluid rounded mt-5" alt="Responsive image">
             </div>
 
             <div class="col-lg-12">
-                <h2 style="font-family: 'Oswald';">DOMO LAYAN DIRI</h2>
+                <h2 style="font-family: 'Oswald';">DOBI LAYAN DIRI</h2>
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
                         <a class="nav-link active bg-info text-light" style="border:1px white solid" href="#" data-toggle="modal" data-target="#modalHistory" type="button">📋 Order
