--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>DOMO DOBI</title>
+    <title>DOBI LAYAN DIRI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -174,7 +174,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-light">
         <div class="container">
-            <p class="m-0 text-center text-dark">Copyright &copy; DOMO DOBI</p>
+            <p class="m-0 text-center text-dark">Copyright &copy; DOBI LAYAN DIRI</p>
         </div>
 
     </footer>
