--- a/pills.html
+++ b/pills.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12">
-    <h2 style="font-family: 'Oswald';">DOMO DOBI</h2>
+    <h2 style="font-family: 'Oswald';">DOBI LAYAN DIRI</h2>
     <ul class="nav nav-pills nav-fill mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation" style="border-radius:0;border:solid white 1px;">
             <a class="nav-link bg-info active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
