--- a/order.html
+++ b/order.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>DOMO DOBI</title>
+    <title>DOBI LAYAN DIRI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
             </div>
 
             <div class="col-lg-12">
-                <h2 style="font-family: 'Oswald';">DOMO LAYAN DIRI</h2>
+                <h2 style="font-family: 'Oswald';">DOBI LAYAN DIRI</h2>
                 <!-- <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
                         <a class="nav-link active bg-info text-light" style="border:1px white solid" href="#">📋 Order
@@ -256,7 +256,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-light">
         <div class="container">
-            <p class="m-0 text-center text-dark">Copyright &copy; DOMO DOBI</p>
+            <p class="m-0 text-center text-dark">Copyright &copy; DOBI LAYAN DIRI</p>
         </div>
 
     </footer>
