--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <a class="navbar-brand" href="#">DOBI LAYAN DIRI</a>
             <div class="collapse navbar-left navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <!-- <li class="nav-item active">
                         <a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
                             </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" type="button" data-toggle="modal" data-target="#modalContact">Contact Us</a>
                     </li>
