--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" type="button" data-toggle="modal" data-target="#modalContact">Contact Us</a>
+                        <a class="nav-link" data-toggle="modal" data-target="#modalContact">Contact Us</a>
                     </li>
 
                 </ul>
