--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 </button>
 
-            <a class="navbar-brand" href="#"><img class="" width="60%" src="./img/logo.png" alt="DOBI LAYAN DIRI"></a>
+            <a class="navbar-brand" href="#"><img class="img-fluid" width="60%" src="./img/logo.png" alt="DOBI LAYAN DIRI"></a>
             <div class="collapse navbar-left navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <!-- <li class="nav-item active">
