--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                 <h2 style="font-family: 'Oswald';">DOBI LAYAN DIRI</h2>
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link active bg-info text-light" style="border:1px white solid" href="#" data-toggle="modal" data-target="#modalHistory" type="button">📋 Order
-                                                            History</a>
+                        <a class="nav-link active bg-info text-light" style="border:1px white solid" href="#" data-toggle="modal" data-target="#modalHistory" type="button"><img width="20px" src="./img/tag.png" alt="tag"> Order History
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link bg-info text-light" style="border:1px white solid" href="#" data-toggle="modal" data-target="#modalMen" type="button">🛒 My Cart</a>
+                        <a class="nav-link bg-info text-light" style="border:1px white solid" href="#" data-toggle="modal" data-target="#modalMen" type="button"><img width="20px" src="./img/cart.png" alt="cart"> My Cart</a>
                     </li>
                 </ul>
             </div>
