--- a/order.html
+++ b/order.html
@@ -35,9 +35,9 @@
     </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">🡠 LAUNDRY</a>
+            <a class="navbar-brand" onclick="bomIndex()"><img class="img-fluid" width="45%" src="./img/logo-laundry.png" alt="DOBI LAYAN DIRI"></a>
             <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#modalMen">
-                    <span class="">🛒</span>
+                    <span class=""><img width="20px" src="./img/cart.png" alt="cart"></span>
                 </button>
 
 
